syntax = "proto3";
package endpoint;

service EndpointService {
    rpc GetApiGroups (GetApiGroupsRequest) returns (stream GetApiGroupsResponse);
    rpc UploadApiGroups (UploadApiGroupsRequest) returns (UploadApiGroupsResponse);

    // New methods for user preferences
    rpc GetUserPreferences (GetUserPreferencesRequest) returns (GetUserPreferencesResponse);
    rpc UpdateUserPreferences (UpdateUserPreferencesRequest) returns (UpdateUserPreferencesResponse);
    rpc ResetUserPreferences (ResetUserPreferencesRequest) returns (ResetUserPreferencesResponse);
}

message GetApiGroupsRequest {
    string email = 1;
}

message Parameter {
    string name = 1;
    string description = 2;
    string required = 3;
    repeated string alternatives = 4;
}

message Endpoint {
    string id = 1;
    string text = 2;
    string description = 3;
    string verb = 4;
    string base = 5;
    string path = 6;
    repeated Parameter parameters = 7;
    string group_id = 8;
}

message ApiGroup {
    string id = 1;
    string name = 2;
    string description = 3;
    string base = 4;
    repeated Endpoint endpoints = 5;
}

message GetApiGroupsResponse {
    repeated ApiGroup api_groups = 1;
}

message UploadApiGroupsRequest {
    string email = 1;
    bytes file_content = 2;
    string file_name = 3;
}

message UploadApiGroupsResponse {
    bool success = 1;
    string message = 2;
    int32 imported_count = 3;
    int32 group_count = 4;
}

message UserPreferences {
    string email = 1;
    repeated string hidden_defaults = 2;
}

message GetUserPreferencesRequest {
    string email = 1;
}

message GetUserPreferencesResponse {
    bool success = 1;
    string message = 2;
    UserPreferences preferences = 3;
}

message UpdateUserPreferencesRequest {
    string email = 1;
    string action = 2; // "hide_default" or "show_default"
    string endpoint_id = 3;
}

message UpdateUserPreferencesResponse {
    bool success = 1;
    string message = 2;
}

message ResetUserPreferencesRequest {
    string email = 1;
}

message ResetUserPreferencesResponse {
    bool success = 1;
    string message = 2;
}
